[package]
name = "task"
version = "0.1.0"
authors = ["Govardhan G D <govardhangdg@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.20", features = ["full", "parsing", "extra-traits"] } 
quote = "1.0.4" 
itertools = "0.9.0" 
