[package]
name = "use-macro"
version = "0.1.0"
authors = ["Govardhan G D <govardhangdg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
task = {path = "../"}
itertools = "0.9.0"

[dev-dependencies]
trybuild = "1.0.27"    